# social_media_app

./: LICENSE  README.md  pyproject.toml
social_network_app/: asgi.py  settings.py  urls.py  wsgi.py
