[tool.poetry]
name = "social-network-app"
version = "0.1.0"
description = ""
authors = ["Soroushk1999 <soroush.koohkamari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
